Fix whitespace

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -416,13 +416,9 @@ dd, li {
 dd, li li {
   font-size: var(--smaller);
 }
-dd dd:first-of-type, li li:first-of-type {
-
-}
-nav li, nav li {
-}
-nav dd, nav li li
-  { font-size: 1em }
+dd dd:first-of-type, li li:first-of-type {}
+nav li, nav li {}
+nav dd, nav li li { font-size: 1em }
 nav dt + dd, nav li li:first-of-type
   { margin-top: 0 }
 details > dl, details > dd,
